# agentic-triage-system

./: .gitignore  GESTIONE_ERRORI.md  README.md  pyproject.toml
data/: policy.txt
src/: client.py  logic.py  main.py  paths.py
src/parsing/: parser.py
src/primo_agente.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/prompts/: triage_v1.py
src/schemas/: ticket.py
src/storage/: store.py
src/tools/: enrichment.py  logger.py  office_tools.py  registry.py  router.py
tests/: test_enrichment.py  test_logic.py  test_main.py  test_parser.py  test_router.py  test_store.py  test_tools.py
